--- a/public/chat.html
+++ b/public/chat.html
@@ -36,6 +36,7 @@
           <h3><i class="fas fa-users"></i> Онлайн</h3>
           <ul id="users"></ul>
         </div>
+
         <div class="chat-messages">
           <!-- <div class="square-spin"><div></div></div> -->
           <div class="lds-dual-ring square-spin"></div>
@@ -43,7 +44,14 @@
             <span class="close">&times;</span>
             <img class="modal-content" id="img01">
           </div>
+          <div class="arrow" id="arrow">
+            <div class="arrow-top"></div>
+            <div class="arrow-bottom"></div>
+            <span class="arrowDiv"></span>
+            </div>
+          </div>
         </div>
+
       </main>
       <div class="chat-form-container">
         <div class="typing" style="position: absolute; width: 100%; bottom: 60px;">
@@ -81,6 +89,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="js/jquery-3.5.1.min.js" defer></script>
     <script src="js/main.js" defer></script>
   </body>
 </html>
