--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./img/icon.svg" type="image/png">
-    <title>Chat</title>
+    <title>Чат - Авторизация</title>
     <link
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
@@ -16,7 +16,7 @@
 <body>
     <div class="join-container">
         <header class="join-header">
-            <h1 style="color:rgba(40, 58, 70)"><img src="./img/icon.svg" id="imageBird"><span id="about">Chat</span></h1>
+            <h1 style="color:rgba(40, 58, 70)"><img src="./img/icon.svg" id="imageBird"><span id="about">Чат</span></h1>
            
         </header>
         <main class="join-main">
