--- a/public/index.html
+++ b/public/index.html
@@ -34,23 +34,7 @@
 				</form>
 			</main>
 		</div>
-		<script>
-			const btn = document.querySelector('.btn');
-			
-			document.querySelector('input').addEventListener('input', (el) => { 
-			let val = el.target.value;
-			el.target.value = (val.replace(/[\s]/g, ''));
-			});
-
-			btn.addEventListener("click", function(){
-				btn.classList.toggle("roomBtn");
-			});
-
-			let lsn = localStorage.getItem('session');
-			if(!lsn) {
-				window.location.href = '/'
-			};
-			
-		</script>
+		 <script src="js/socket.io.js"></script>
+		 <script src="js/index.js"></script>
 	</body>
 </html>
