--- a/public/login.html
+++ b/public/login.html
@@ -31,8 +31,8 @@
                     name="login"
                     id="login"
                     placeholder="Введите логин..."
-                    
-                    maxlength="15"
+                    maxlength="20"
+                    onmousedown="inputIntoFields(this);"
                     />
                     <span class="error" aria-live="polite" id="errorLogin"></span>
                 </div>
@@ -42,7 +42,8 @@
                     name="password"
                     id="password"
                     placeholder="Введите пароль..."
-                    
+                    onmousedown="inputIntoFields(this);"
+                    maxlength="20"
                 />
                 <span class="error" aria-live="polite" id="errorPass"></span>
                 <img src="./img/view.svg" onclick="ShoMePass(this);" id="showPass"/>
