--- a/public/login.html
+++ b/public/login.html
@@ -46,8 +46,7 @@
                     maxlength="20"
                 />
                 <span class="error" aria-live="polite" id="errorPass"></span>
-                <img src="./img/on.png" onclick="ShoMePass(this);" id="showPass"/>
-                <img src="./img/dig.png" onclick="generatePass()" id="generate"/>
+                <img src="./img/on.svg" onclick="ShoMePass(this);" id="showPass"/>
                 </div>
                 <button type="submit" class="btn" id="enterBtn">Войти</button>
                 <button type="submit" class="btn-reg" id="regBtn">Регистрация</button>
